Add artifact upload for scraped data
Added step to save scraped data as an artifact.

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -34,3 +34,9 @@ jobs:
 
       - name: Run Playwright script
         run: python test_playwright.py
+
+      - name: Save scraped data
+        uses: actions/upload-artifact@v4
+        with:
+          name: scraped-data
+          path: data/output.csv
