add scraping_model_page.py and fix slot_data_analysis.yml

--- a/.github/workflows/slot_data_analysis.yml
+++ b/.github/workflows/slot_data_analysis.yml
@@ -36,7 +36,8 @@ jobs:
 
       - name: Run Playwright script
         # run: python scraper/scraping_hall_page.py
-        run: python scraper/scraping_date_page.py
+        # run: python scraper/scraping_date_page.py
+        run: python scraper/scraping_model_page.py
 
       - name: Save scraped results
         uses: actions/upload-artifact@v4
