--- a/.github/workflows/slot_data_analysis.yml
+++ b/.github/workflows/slot_data_analysis.yml
@@ -6,7 +6,7 @@ on:
   #   branches: [ main ] # mainブランチにpushされたら実行
 
 jobs:
-  run-playwright:
+  run-scraping:
     runs-on: ubuntu-latest
 
     steps:
@@ -37,7 +37,8 @@ jobs:
       - name: Run Playwright script
         # run: python scraper/scraping_hall_page.py
         # run: python scraper/scraping_date_page.py
-        run: python scraper/scraping_model_page.py
+        # run: python scraper/scraping_model_page.py
+        run: python scraper/scraping_results.py
 
       - name: Save scraped results
         uses: actions/upload-artifact@v4
