--- a/.github/workflows/slot_data_analysis.yml
+++ b/.github/workflows/slot_data_analysis.yml
@@ -38,7 +38,8 @@ jobs:
         # run: python scraper/scraping_hall_page.py
         # run: python scraper/scraping_date_page.py
         # run: python scraper/scraping_model_page.py
-        run: python scraper/scraping_results.py
+        # run: python scraper/scraping_results.py
+        run: python scraper/scraper.py
 
       - name: Save scraped results
         uses: actions/upload-artifact@v4
